fix z-index

--- a/styles/scss/_navigation.scss
+++ b/styles/scss/_navigation.scss
@@ -9,7 +9,7 @@
     background-color: $headerColor;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 150;
 
     &__menu {
         display: flex;
